# testc

./: .gitmodules  CMakeLists.txt  Makefile  README.md  compile_commands.json  imgui.ini  main.c  tri.c
examples/main/: main.c
examples/sdl_cpu_model/: sdl_cpu_model.c
examples/sdl_cpu_triangle/: sdl_cpu_triangle.c
examples/sdl_gpu_model/: sdl_gpu_model.c
examples/sdl_gpu_triangle/: basic_triangle.vert  sdl_gpu_triangle.c
examples/sdl_gpu_voxel/: sdl_gpu_voxel.c
examples/tri/: tri.c
examples/x11_cpu_model/: x11_cpu_model.c
examples/x11_model/: x11_model.c
scripts/: build_shadercross.sh  build_shaders.sh
shaders/: README.md  build_shaders.sh
